--- a/Атрибуты и методы/Практические задания/task4_LinkedList_in/task-info.yaml
+++ b/Атрибуты и методы/Практические задания/task4_LinkedList_in/task-info.yaml
@@ -124,5 +124,8 @@ files:
             self.is_valid(next_)
             self.next = next_
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 29 Dec 2021 16:55:47 UTC
 record: -1
