--- a/Инкапсуляция, наследование, полиморфизм/Лабораторные задания/task2_DoubleLinkedNode_inheritance/task-info.yaml
+++ b/Инкапсуляция, наследование, полиморфизм/Лабораторные задания/task2_DoubleLinkedNode_inheritance/task-info.yaml
@@ -11,7 +11,7 @@ files:
       offset: 948
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: '# TODO'
   text: |
     from typing import Any, Optional
@@ -53,6 +53,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Tue, 25 Jan 2022 17:40:00 UTC
 record: -1
 post_submission_on_open: true
