--- a/Атрибуты и методы/Практические задания/task2_LinkedList__getitem__/task-info.yaml
+++ b/Атрибуты и методы/Практические задания/task2_LinkedList__getitem__/task-info.yaml
@@ -11,7 +11,7 @@ files:
       offset: 183
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 'self.head: Optional[Node] = None'
   - offset: 751
     length: 56
@@ -21,7 +21,7 @@ files:
       offset: 532
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: self.head = self.list_nodes[0]
   - offset: 1565
     length: 41
@@ -31,7 +31,7 @@ files:
       offset: 1346
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       if not isinstance(index, int):
                   raise TypeError
@@ -43,7 +43,7 @@ files:
       offset: 1412
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: self.head
   - offset: 1681
     length: 57
@@ -53,7 +53,7 @@ files:
       offset: 1462
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       for _ in range(index):
                   current_node = current_node.next
@@ -65,7 +65,7 @@ files:
       offset: 1674
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       node = self.step_by_step_on_nodes(index)
               return node.value
@@ -171,5 +171,8 @@ files:
             self.is_valid(next_)
             self.next = next_
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 02 Feb 2022 15:49:17 UTC
 record: -1
