--- a/Зачетное задание/Зачетное задание/DoubleLinkedList/task-info.yaml
+++ b/Зачетное задание/Зачетное задание/DoubleLinkedList/task-info.yaml
@@ -36,5 +36,8 @@ files:
   text: |
     ...
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 02 Feb 2022 16:39:55 UTC
 record: -1
