--- a/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task3_LinkedList__mul__/task-info.yaml
+++ b/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task3_LinkedList__mul__/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 2428
-    length: 60
+  - offset: 2638
+    length: 50
     placeholder_text: '... # TODO реализовать метод клонирования последовательности'
     initial_state:
       length: 60
       offset: 2428
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       if not isinstance(other, int):
                   raise TypeError
@@ -161,5 +161,8 @@ files:
             self.is_valid(next_)
             self._next = next_
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 02 Feb 2022 15:23:25 UTC
 record: -1
