--- a/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task4_LinkedList__imul__/task-info.yaml
+++ b/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task4_LinkedList__imul__/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 3214
-    length: 61
+    length: 140
     placeholder_text: '...  # TODO определить одновременное умножение и присваивание'
     initial_state:
       length: 61
       offset: 3214
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       if not isinstance(other, int):
                   raise TypeError
@@ -187,5 +187,8 @@ files:
             self.is_valid(next_)
             self._next = next_
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 02 Feb 2022 15:45:41 UTC
 record: -1
