--- a/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task5_LinkedList__lt__/task-info.yaml
+++ b/Инкапсуляция, наследование, полиморфизм/Домашнее задание/task5_LinkedList__lt__/task-info.yaml
@@ -11,17 +11,17 @@ files:
       offset: 105
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: '@total_ordering'
   - offset: 2577
-    length: 30
+    length: 444
     placeholder_text: '# TODO определить метод __lt__'
     initial_state:
       length: 30
       offset: 2577
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       def __lt__(self, other: "LinkedList") -> bool:
               if not isinstance(other, LinkedList):
@@ -180,6 +180,8 @@ files:
             self.is_valid(next_)
             self._next = next_
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Wed, 02 Feb 2022 15:24:40 UTC
 record: -1
 post_submission_on_open: true
