--- a/Основы ООП/Домашнее задание/task9_Date/task-info.yaml
+++ b/Основы ООП/Домашнее задание/task9_Date/task-info.yaml
@@ -11,7 +11,7 @@ files:
       offset: 0
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |
       # TODO
   text: '# TODO class Date'
@@ -33,5 +33,8 @@ files:
 - name: tests/__init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 02 Feb 2022 15:58:16 UTC
 record: -1
